Simplify isComplete checking. Print yarn logs message when the program ends. Add killJobAndWait(). Add -mapperPermSize argument.  Set PermSize to 256m by default for Java 7 and below.